0025816: IGES export - edges within compound are lost if BREP mode (IGES 5.1) is used

Enable writing wires, edges, and vertices inside compound in IGES in BREP mode.
Create IGES group for compound even if it contains single shape.